added better error message handling